feat(feedback): implement feedback fix - refactor client side code to fit airbnb style guides - write more tests for client side to increase coverage - redo paginantion implementation
