# server/middlewares/favoriteValidation.js
@@ -19,11 +19,16 @@ const favoriteExists = (req, res, next) => {
     });
   }
   Favorite
-    .findOne({ where: { userId: req.decoded.user.id, recipeId: req.params.id } })
+    .findOne({
+      where: {
+        userId: req.decoded.user.id,
+        recipeId: req.params.id
+      }
+    })
     .then((favorite) => {
       if (favorite) {
         // if user has already favorited recipe
-        return res.status(401).send({
+        return res.send({
           status: 'fail',
           message: 'Recipe already favorited by user!'
         });
